# deepresearch_agent_v1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.job  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-alignment-checker.md  code-reviewer.md  code-simplifier.md  design-consistency-checker.md  e2e-writer.md  housekeeper.md  implementer.md  performance-reviewer.md  pipeline-orchestrator.md  refactorer.md  research-agent.md  security-reviewer.md  task-executor.md  test-writer.md
.claude/commands/: add-feature.md  debug.md  refactor.md  scaffold.md  source-architecture.md  spec-sync.md
.claude/docs/: architecture.md  conventions.md  pipeline.md  testing-standard.md
.claude/hooks/: hooks.json
.claude/linters/: file_size.py  layer_deps.py
.claude/scripts/: scaffold_project.py
.claude/templates/: execution_plan.md  feature_spec.md  feature_spec_lite.md  pipeline_status.md
backend/config/: prompts.py  settings.py
backend/repo/: context_trimmer.py  firestore_client.py  gemini_client.py  langchain_client.py
backend/runtime/: app.py  dependencies.py  job_runner.py
backend/service/: auth_service.py  engine_runner.py  report_parser.py  research_orchestrator.py
backend/types/: enums.py  events.py  graph_state.py  report.py  requests.py
backend/ui/: app_factory.py  auth_middleware.py  auth_routes.py  health_routes.py  report_routes.py  router.py
deploy/: cloud-run-api.yaml  cloud-run-job.yaml  cloud-scheduler.yaml
frontend/: Dockerfile  package-lock.json  package.json
rust-backend/: Cargo.toml
rust-backend/src/: config.rs  errors.rs  main.rs  orchestrator.rs  parser.rs  prompts.rs
rust-backend/src/auth/: middleware.rs  service.rs
rust-backend/src/engines/: engine.rs  runner.rs
rust-backend/src/repo/: sqlite.rs
rust-backend/src/routes/: auth.rs  mod.rs  reports.rs
rust-backend/src/search/: mod.rs  tavily_tool.rs
rust-backend/src/types/: enums.rs  events.rs  mod.rs  report.rs  requests.rs
specs/design/: dashboard-comparison.html
src/config/: prompts.py
src/repo/: firestore_client.py  gemini_client.py  langchain_client.py
src/runtime/: app.py  dependencies.py  job_runner.py
src/service/: auth_service.py  engine_runner.py  report_parser.py  research_orchestrator.py
src/types/: errors.py  events.py  ids.py  report.py  requests.py
src/ui/: app_factory.py  auth_middleware.py  (+3 more)
tests/: conftest.py
(+107 files in other folders)
