[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rig-core = { version = "0.31.0", features = ["derive"] }
tavily = "2.1.0"
jsonwebtoken = "9"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }
schemars = "0.8"
